src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --keyDefault: #767879;
  --keyYellow: rgb(174 148 62);
  --keyGreen: rgb(68 130 72);
  --keyNone: rgb(51 51 52);
}

@keyframes rowWiggle {
  0% {
    translate: 0% 0%;
  }
  33% {
    translate: -10% 0%;
  }
  66% {
    translate: 10% 0%;
  }
  100% {
    translate: 0% 0%;
  }
}

div[data-wiggle='1'] {
  animation-name: rowWiggle;
  animation-duration: 0.1s;
  animation-timing-function: linear;
  animation-iteration-count: 2;
}

@keyframes letterPlaced {
  0%, 100% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
}

@keyframes letterFlipGreen {
  0% {
    transform: scaleY(1);
    border-color: rgb(76 77 78);
  }
  50% {
    transform: scaleY(0);
    border-color: rgb(76 77 78);
  }
  100% {
    transform: scaleY(1);
    background-color: var(--keyGreen);
    border-color: var(--keyGreen);
  }
}

@keyframes letterFlipYellow {
  0% {
    transform: scaleY(1);
    border-color: rgb(76 77 78);
  }
  50% {
    transform: scaleY(0);
    border-color: rgb(76 77 78);
  }
  100% {
    transform: scaleY(1);
    background-color: var(--keyYellow);
    border-color: var(--keyYellow);
  }
}

@keyframes letterFlipNone {
  0% {
    transform: scaleY(1);
    border-color: rgb(76 77 78);
  }
  50% {
    transform: scaleY(0);
    border-color: rgb(76 77 78);
  }
  100% {
    transform: scaleY(1);
    background-color: var(--keyNone);
    border-color: var(--keyNone);
  }
}

@keyframes keyRevealGreen {
  to {
    background-color: var(--keyGreen);
  }
}

@keyframes keyRevealYellow {
  to {
    background-color: var(--keyYellow);
  }
}

@keyframes keyRevealNone {
  to {
    background-color: var(--keyNone);
  }
}

